syntax = "proto3";

option csharp_namespace = "TaskService.Proto";

package TaskService;

import "DatabaseExtension.Proto/Filters/Filter.proto";

message GetLifecycleIndexRequest
{
    DatabaseExtension.Filter Filter = 1;
}
